finish template coWorker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,8 +42,31 @@
 .shadOne {
   box-shadow: -1px 0px 3px -2px #000;
 }
+/* .custom-ckeditor .ck-content[dir="rtl"] {
+  direction: rtl !important;
+  text-align: right !important;
+}
 
+.custom-ckeditor .ck-content[dir="ltr"] {
+  direction: ltr !important;
+  text-align: left !important;
+} */
+.ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline p{
+  font-size: 1.5rem;
+  font-weight: 100;
+}
+.ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline p>strong{
+  font-size: 1.6rem !important;
+  font-weight: 600 !important;
+}
+.mui-selector>*{
+  font-size: 1.3rem;
+  @apply !font-light
+}
 
+.ck.ck-content{
+  min-height: 40rem !important;
+}
 
   @media only screen and (max-width: 500px) {
     * {
