--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,22 @@
   .ck.ck-content {
     min-height: 40rem !important;
   }
-
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #374151;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #fff;
+  }
+  .select-appearance-none {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+  }
   @media only screen and (max-width: 500px) {
     * {
       cursor: default;
