profileBtn complete template

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,16 @@
     transition: background-color 5000s ease-in-out 0s;
     box-shadow: inset 0 0 20px 20px #fff;
   }
+  
+  .dark input:-webkit-autofill,
+  .dark input:-webkit-autofill:hover,
+  .dark input:-webkit-autofill:focus,
+  .dark input:-webkit-autofill:active {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #1e293b;
+  }
   .select-appearance-none {
     -webkit-appearance: none;
     -moz-appearance: none;
