--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@
   }
 
 
-  /* .ck.ck-content {
+  .ck.ck-content {
     min-height: 40rem !important;
   }
   .dark .ck.ck-toolbar.ck-toolbar_grouping{
@@ -60,7 +60,7 @@
   }
   .dark .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline{
     background: #000;
-  } */
+  }
 
 
 
