--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @tailwind base;
-@tailwind _components;
+@tailwind components;
 @tailwind utilities;
 
 @layer base {
@@ -18,7 +18,7 @@
     src: local(yekRegular), url(../../public/fonts/BYekan/BYekan+.ttf);
     font-display: swap;
   }
-  @import 'aos/dist/aos.css';
+  /* @import 'aos/dist/aos.css'; */
 
   * {
     padding: 0px;
