--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    transition: all ease-in 0.1s;
   }
   html {
     direction: rtl;
